--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ footer {
     color: #edf5fcff;
     text-align: center;
     padding: 20px;
-    width: 100%;
+    position: static;
 }
 
 .nav-link.active {
