--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ footer {
     color: #edf5fcff;
     text-align: center;
     padding: 20px;
-    width: 100%;
+    position: static;
 }
 
 footer p {
