--- a/styless.css
+++ b/styless.css
@@ -38,6 +38,10 @@ h1, h2, h3, p {
     color: #00ff00; 
 }
 
+h3 {
+    margin-top: 0;
+}
+
 main {
     padding: 20px;
     display: flex;
@@ -77,12 +81,17 @@ footer {
     color: #edf5fc;
     text-align: center;
     padding: 20px;
-    width: 100%;
+    position: static;
 }
 
 @media (max-width: 768px) {
     nav .nav-link {
         margin: 0; 
         padding: 5px 5px;
+    }
+
+    .portfolio-section {
+        align-self: flex-start;
+        text-align: left;
     }
 }
