--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,27 @@ body {
 header {
     background-color: #101935ff;
     color: #edf5fcff;
-    padding: 20px;
-    text-align: center;
-    position: static;
+    padding: 20px 0;
+    position: fixed;
+    width: 100%;
 }
 
-.nav-link {
-    color: #edf5fcff;
-    padding: 10px 20px;
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav a {
+    margin: 0 20px;
     text-decoration: none;
-    margin: 0 10px;
+    color: #edf5fcff;
+    display: flex;
+    align-items: center;
+}
+
+nav a span {
+    display: none;
 }
 
 .nav-link.active {
@@ -92,7 +103,7 @@ footer p {
 
     nav .nav-link {
         margin: 0; 
-        padding: 5px 5px;
+        padding: 0 5px;
     }
 
     .profile-pic {
