--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,3 @@
-/* 
-änderungen vom Mockup
-=====================
-
-allgemein
-- content vertikal zentriert nicht top
-- Footer/Header andere Fabre des Textes
-
-fähigkeiten: 
-- kleinere abstände zwischen titel - text - liste
-
-portfolio:
-- titel links nicht zentriert (desktop) 
-- keine Trennlinie
-- Titel der einzelnen Portflio abschitte
-
-kontaktform:
-- breite form angeglichen/korrigiert
-- Neue spallte Betreff
-- keine Placeholder
-*/
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto');
 
 /* 1. base */
@@ -52,12 +30,10 @@ html {
     box-sizing: border-box;
 }
 
-input,
-button,
-textarea,
-select {
-    font-family: inherit;
-    font-size: inherit;
+input, button,
+textarea, select {
+  font-family: inherit;
+  font-size: inherit;
 }
 
 body {
@@ -120,7 +96,7 @@ nav a {
 }
 
 .nav-link.active {
-    color: var(--emerald);
+    color: #00ff00;
 }
 
 main {
@@ -133,7 +109,7 @@ main {
 }
 
 footer {
-    background-color: var(--oxford-blue);
+    background-color: #101935ff;
     color: var(--alice-blue);
     text-align: center;
     padding: 20px;
@@ -143,7 +119,7 @@ footer {
 .divider {
     width: 120px;
     height: 2px;
-    background-color: var(--aureolin);
+    background-color: #F0E100;
     margin: 30px auto;
 }
 
@@ -224,8 +200,9 @@ footer {
     min-width: 100%;
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid var(--oxford-blue);
+    border: 1px solid #ccc;
     border-radius: 5px;
+    /* resize: none; */
 }
 
 .contact-form textarea {
@@ -233,8 +210,8 @@ footer {
 }
 
 button {
-    background-color: var(--oxford-blue);
-    color: var(--alice-blue);
+    background-color: #101935ff;
+    color: #edf5fcff;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
